# heterograph

./: .buildinfo  MANIFEST.in  README.md  environment.yml  genindex.html  index.html  notebooks.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
_sources/autoapi/: index.rst.txt
_sources/autoapi/heterograph/: index.rst.txt
_sources/notebooks_/: 3-hgraph-pmaps.ipynb.txt
autoapi/: index.html
autoapi/heterograph/: index.html
autoapi/heterograph/algorithm/: index.html
autoapi/heterograph/hgraph/: index.html
autoapi/heterograph/query/: index.html
autoapi/heterograph/webview/: index.html
conda/: meta.yaml
docs/: Makefile
docs/source/: api-filter.yml  conf.py  index.rst  notebooks.rst
docs/source/notebooks_/: 1-hgraph-basics.ipynb  2-hgraph-ops.ipynb  3-hgraph-pmaps.ipynb  4-hgraph-visualisation.ipynb  (+1 more)
heterograph/: __init__.py  hgraph.py  hgraph_props.py  webview.py
heterograph/algorithm/: dfs.py
heterograph/query/: aql.py  graphdef.py  processor_dfs.py  qgraph.py  resultset.py  rsutils.py  transformer.py
notebooks/: 1-hgraph-basics.ipynb  2-hgraph-ops.ipynb  4-hgraph-visualisation.ipynb  5-hgraph-queries.ipynb
notebooks_/: 1-hgraph-basics.html  1-hgraph-basics.ipynb  2-hgraph-ops.html  2-hgraph-ops.ipynb  3-hgraph-pmaps.html  3-hgraph-pmaps.ipynb  4-hgraph-visualisation.html  4-hgraph-visualisation.ipynb  5-hgraph-queries.html  5-hgraph-queries.ipynb
tests/: test_hgraph_dfs.py  test_hgraph_edges.py  test_hgraph_init.py  test_hgraph_neighbours.py  test_hgraph_query.py  test_hgraph_vertices.py
(+20 files in other folders)
